MDL-10409 - .invisiblefieldset display: inline issue

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1093,6 +1093,10 @@ body#admin-modules table.generaltable td.c0
   margin-right: auto;
 }
 
+#admin-report-stats-index .invisiblefieldset {
+  display: block;
+}
+
 /***
  *** Blocks
  ***/
